v0.9.4
-------------------
* getting rid of most (all?) of the PHP warnings/notices thrown
! tagline() method missed to exactly extrac the tagline from the main page when
  the movie only contained one tagline
! fixed the season display in the demo page which sometimes was caught in an
  endless loop (the API itself was not affected)

v0.9.3 (25.03.2008)
-------------------
! fixed some incorrect calls to strrpos causing PHP error messages
* changing default imdb site from us.imdb.com to akas.imdb.com to also find
  localized AKAs
+ new method movieconnection() returns connected movies (mid, name, year and
  maybe comment)
+ new method extReviews() returns external reviews for this movie (url,desc)
* some code cleanup, optimization and comments
* minor optical enhancements to the demo pages
+ imdbsearch class: added method search_episodes to restrict the search to
  either movies or episodes (before it was always restricted to movies)

v0.9.2 (13.03.2008)
-------------------
* replacing strpos..substr loops in several functions by preg_match_all constructs
! runtime was broken for some movies (errors on the IMDB pages?)
+ added soundtrack() method for guess what...
! setid() forgot to reset some credits - fixed.
* no more duplicate IMDB IDs are displayed anymore (thanx to Josh for pointing this out!)
! the result set limit ($maxresults) was not honored (again Josh - thanx!)

v0.9.1 (20.01.2008)
-------------------
! year was screwed up when movie title contained "()"
! method rating() did not return any value on subsequent calls (only on the first)
+ added support for retrieving trailer urls (method trailers())
+ added retrieval of 'Crazy Credits' (try with 'The Blues Brothers', they have some)
+ added goof retrieval (again, you can see some with 'The Blues Brothers')
* some cleanup
* moved error message output into debug methods so they can be turned off
  (do so in imdb_config.php with the $this->debug setting)
+ added method trivia() to retrieve the trivias
