@@ -5,6 +5,8 @@ v0.9.4
   the movie only contained one tagline
 ! fixed the season display in the demo page which sometimes was caught in an
   endless loop (the API itself was not affected)
++ added a drop-down box to the demo search page to select whether to search for
+  a movie or an episode by the given name
 
 v0.9.3 (25.03.2008)
 -------------------
